# simple_qtCalculator

./: .gitignore  CMakeLists.txt  calculator.cpp  calculator.h  calculator.ui  controller.cpp  controller.h
